# AppSignal

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/test/signature/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Md5.cpp  Md5.h  signal.cpp
app/src/main/java/com/test/signal/: MainActivity.java
app/src/main/java/signal/: JNISignal.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/test/signature/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
